...

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_customer_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_16dp"
                android:text="@string/customer_information"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/textLarge" />
...
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:background="@drawable/ic_first_name"
                    android:contentDescription="@string/icon" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilCustomerFirstName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etCustomerFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:inputType="textPersonName"
                        android:lines="1"
                        android:maxLength="16"
                        android:maxLines="1"
                        android:textSize="@dimen/textMedium" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilCustomerLastName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etCustomerLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:inputType="textPersonName"
                        android:lines="1"
                        android:maxLength="16"
...
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:background="@drawable/mail_ic"
                    android:contentDescription="@string/icon"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:maxLines="1"
...
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:background="@drawable/mobile_phone"
                    android:contentDescription="@string/icon" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etPhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:lines="1"
                        android:maxLines="1"
                        android:textSize="@dimen/textMedium" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <TextView
                android:id="@+id/tv_shipping_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_PhoneNumber"
                android:layout_marginTop="@dimen/spacing_16dp"
                android:text="@string/update_billing_address"
                android:textColor="@color/colorPrimaryDark"
...
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_billing_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_country_billing"
                android:layout_marginTop="@dimen/spacing_16dp"
                android:text="@string/update_shipping_address"
                android:textColor="@color/colorPrimaryDark"
...
