...
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/ic_first_name"
                android:contentDescription="@string/icon" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:maxLines="1"
...
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/last_name_icon"
                android:contentDescription="@string/icon" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:maxLines="1"
...
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/lock_icon"
                android:contentDescription="@string/icon" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilRegistrationPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etRegistrationPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLines="1"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="@dimen/textMedium" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_password"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/buttons_margin"
            android:layout_marginTop="@dimen/buttons_margin"
...
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/textLarge" />

        <TextView
            android:id="@+id/tvGoToLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnSignUp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
...
