...
            <com.daimajia.slider.library.SliderLayout
                android:id="@+id/sl_product"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_200sdp" />

            <TextView
                android:id="@+id/tv_product_title_fragment_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/product_title"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/tv_product_price_fragment_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:text="@string/product_price"
...
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/iv_favourite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_4sdp"
                        android:background="@drawable/favourite_icon"
                        android:contentDescription="@string/favourites_image" />
...
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:background="@color/body_grey" />

                    <ImageView
                        android:id="@+id/iv_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_4sdp"
                        android:background="@drawable/share"
...
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/iv_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_4sdp"
                        android:background="@drawable/action_2_icon"

                        android:contentDescription="@string/more"
...
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/body_grey" />

            <TextView
                android:id="@+id/tv_product_description_fragment_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                android:text="@string/product_description" />
        </LinearLayout>
    </ScrollView>
...
