...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_products_cart_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
...

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_discount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/discount"
                        android:textSize="@dimen/textLarge"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_discount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_discount"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="4dp"
                        android:hint="@string/enter_yoou_coupon_here"
                        android:textSize="@dimen/textMedium" />

                    <Button
                        android:id="@+id/btn_apply_coupon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/et_discount"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="@dimen/spacing_4dp"
                        android:layout_marginLeft="@dimen/spacing_4dp"
...
            android:text="@string/total"
            android:textColor="@color/black"
            android:textSize="@dimen/textMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/_8sdp"
            android:text="@string/btn_continue"
...
